# cpp_host

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  bootstrap.ps1  bootstrap.sh  conanfile.py  gitversion.yml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
examples/: log_indexer.cpp
include/generic_host/: ConsoleHost.h  ConsoleLifecycle.h  Host.h  HostBuilder.h  HostBuilder.hpp  HostImpl.hpp  IHostLifecycle.h  IHostedService.hpp  ILogger.hpp  IPlatformHost.h  ServiceCollection.hpp
include/generic_host/Meta/: LambdaList.hpp
include/generic_host/meta/: Boost.hpp  LambdaList.hpp  TypeList.hpp  bindings.hpp  factoryBindings.hpp  lambdas.hpp  multibindings.hpp
src/: ConsoleLifecycle.cpp  ConsoleLogger.cpp  Host.cpp  HostBuilder.cpp
src/generic_host/: HostBuilder.hpp  IHostedService.hpp  ILogger.hpp
src/hosts/: ConsoleHost.cpp
tests/: HostConfigureServicesTests.cpp  Metaprogramming.cpp  ServiceCollectionTests.cpp  ServiceHostingTests.cpp  console_host_tests.cpp  host_tests.cpp  service_collection_tests.cpp
